# plugin_dll_example

./: Cargo.toml  README.md  run  shit_ton.py
.cargo/: config
src/: lib.rs  shit_ton.rs
src/template/: Cargo.toml  template.rs
