[package]
name = "plugin_dll_example_crate"
version = "0.1.0"
authors = ["neptunepink <purpleposeidon@gmail.com>"]
publish = false
#edition = "2018"

[workspace]
members = ["src/template/"]

[lib]
#crate-type = ["dylib"]
#crate-type = ["rlib", "dylib", "cdylib"]
crate-type = ["rlib", "cdylib"]
name = "plugin_dll_example_lib"

#[profile.dev]
#lto = true

[[bin]]
name = "plugin_dll_example_bin"
path = "src/bin/plugin_dll_example_bin.rs"
doc = false


[dependencies]
libloading = "0.4.*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
